Added missing reward, removed "," from special characters, experiments file

--- a/rl_nmt_debug.ipynb
+++ b/rl_nmt_debug.ipynb
@@ -32,6 +32,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Config"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -51,32 +58,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# hide logs from commet\n",
-    "\n",
-    "import logging\n",
-    "import pytorch_lightning as pl\n",
-    "\n",
-    "# Suppress info logs\n",
-    "logging.getLogger(\"pytorch_lightning\").setLevel(logging.ERROR)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from huggingface_hub import login\n",
-    "\n",
-    "login(token=\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -91,8 +72,34 @@
     "os.environ['WANDB_API_KEY'] = WANDB_API_KEY\n",
     "os.environ['WANDB_PROJECT'] = WANDB_PROJECT\n",
     "\n",
-    "os.environ['WANDB_MODE'] = 'online' #'offline'\n",
+    "os.environ['WANDB_MODE'] = 'offline' #'offline'\n",
     "wandb.login()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hide logs from commet\n",
+    "\n",
+    "import logging\n",
+    "import pytorch_lightning as pl\n",
+    "\n",
+    "# Suppress info logs\n",
+    "logging.getLogger(\"pytorch_lightning\").setLevel(logging.ERROR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from huggingface_hub import login\n",
+    "\n",
+    "login(token=\"\")"
    ]
   },
   {
@@ -697,13 +704,13 @@
    "outputs": [],
    "source": [
     "def create_dataset_wikipar_strat(name=\"train\"):\n",
-    "    streamed_dataset = load_dataset(\"dchaplinsky/wikipar-stratified\", split=name)\n",
+    "    dataset = load_dataset(\"dchaplinsky/wikipar-stratified\", split=name)\n",
     "\n",
     "    def map_fn(example):\n",
     "        return format_prompt(example[\"paragraph_text\"])\n",
     "\n",
     "    # Apply the map function\n",
-    "    mapped_dataset = streamed_dataset.map(map_fn)\n",
+    "    mapped_dataset = dataset.map(map_fn)\n",
     "\n",
     "    return mapped_dataset\n",
     "\n",
@@ -921,6 +928,173 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for i in range(1000000):\n",
+    "#     item = train_dataset_wikipar[i]  # Direct access by index\n",
+    "#     if len(item['sources']) > 550:\n",
+    "#         print(i)\n",
+    "#         break\n",
+    "\n",
+    "# train_dataset_wikipar_single = train_dataset_wikipar.skip(i).take(1)\n",
+    "# train_dataset_wikipar_single[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#train_dataset_wikipar_single = train_dataset_wikipar.skip(35001).take(1)\n",
+    "\n",
+    "text = \"In recent years, artificial intelligence has rapidly evolved, transforming industries and daily life. From self-driving cars to medical diagnostics, AI systems demonstrate impressive capabilities—but they also raise ethical concerns. Language models, in particular, generate human-like text but may inadvertently reinforce biases present in training data. As researchers strive for transparency and fairness, new evaluation methods aim to capture both accuracy and nuance. Ultimately, responsible AI development depends not only on technical progress, but on thoughtful consideration of its societal impact.\"\n",
+    "prompt = format_prompt_text(text, tokenizer)\n",
+    "train_dataset_wikipar_single = Dataset.from_list([format_prompt(prompt)])\n",
+    "\n",
+    "torch.set_float32_matmul_precision('high')\n",
+    "\n",
+    "# Configure training arguments using GRPOConfig\n",
+    "training_args = GRPOConfig(\n",
+    "    bf16=True,\n",
+    "    \n",
+    "    num_train_epochs=1000000,\n",
+    "    output_dir=\"nmt\",\n",
+    "    remove_unused_columns=False,  # to access the solution column in accuracy_reward\n",
+    "    \n",
+    "    learning_rate=1e-6,\n",
+    "    num_generations=8,  # 8\n",
+    "    per_device_train_batch_size=1, # 16\n",
+    "    gradient_accumulation_steps=8, # 16\n",
+    "    #per_device_eval_batch_size=4*2,\n",
+    "    max_grad_norm=0.4, # 0.5\n",
+    "\n",
+    "    temperature=0.6,\n",
+    "    \n",
+    "    # Parameters that control de data preprocessing\n",
+    "    max_completion_length=256,\n",
+    "    max_prompt_length=256,\n",
+    "\n",
+    "    # Parameters related to reporting and saving\n",
+    "    log_completions=True, \n",
+    "    report_to=[\"wandb\"],\n",
+    "    logging_steps=1,\n",
+    "\n",
+    "    #eval_strategy=\"epoch\",\n",
+    "    # eval_strategy=\"steps\",\n",
+    "    # eval_steps=2,\n",
+    "\n",
+    "    #push_to_hub=True,\n",
+    "    save_strategy=\"steps\",\n",
+    "    save_steps=100,\n",
+    "    save_total_limit=3,\n",
+    "\n",
+    "    reward_weights=[1.0, 1.0, 1.0, 0.5, 0.1, 0.1, 0.1, 0.1, 0.1],\n",
+    ")\n",
+    "\n",
+    "trainer = GRPOTrainer(\n",
+    "    model=model, \n",
+    "    processing_class=tokenizer,\n",
+    "    reward_funcs=[translation_reward_func_reff_free, emb_sim_reward_func_reff_free, lang_reward_func, reward_lexical, reward_count_uppercase_letters, reward_count_non_letters_no_spaces, reward_count_unpaired_items, reward_count_words, reward_count_unique_words], \n",
+    "    args=training_args, \n",
+    "    train_dataset=train_dataset_wikipar_single,\n",
+    "    #callbacks=[EvalCallback()],\n",
+    "    #eval_dataset=test_dataset_flores,\n",
+    ")\n",
+    "\n",
+    "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t1 = \"В останні роки штучний інтелект швидко розвивається, перетворюючи галузі та повсякденне життя. Від автономних автомобілів до діагностики в медицині, системи штучного інтелекту демонструють вражаючі можливості, але також викликають етичні занепокоєння. Моделі мови, зокрема, генерують текст, який виглядає людським, але можуть випадково підсилювати упередження, присутні в навчальних даних. З огляду на те, що дослідники прагнуть прозорості та справедливості, нові методи оцінювання намагаються враховувати як точність, так і нюанси. Нарешті, відповідальне розроблення штучного інтелекту залежить не лише від технічного прогресу, а й від обдуманого розгляду його соціального впливу.https://translate.google.com/translate?sl=uk;gl=uk&tl=uk|In recent years, artificial intelligence has rapidly evolved, transforming industries and daily life. From self-driving cars to medical diagnostics, AI systems demonstrate impressive capabilities—but they also raise ethical concerns. Language models, in particular,\"\n",
+    "t2 = \"In recent years, artificial intelligence has rapidly evolved, transforming industries and daily life. From self-driving cars to medical diagnostics, AI systems demonstrate impressive capabilities—but they also raise ethical concerns. Language models, in particular, generate human-like text but may inadvertently reinforce biases present in training data. As researchers strive for transparency and fairness, new evaluation methods aim to capture both accuracy and nuance. Ultimately, responsible AI development depends not only on technical progress, but on thoughtful consideration of its societal impact.\"\n",
+    "\n",
+    "t3 = \"\"\"\n",
+    "В останні роки штучний інтелект швидко розвивався, перетворюючи галузі та повсякденне життя. Від автономних автомобілів до діагностики в медицині, системи штучного інтелекту демонструють вражаючі можливості, але також викликають етичні занепокоєння. Моделі мови, зокрема, генерують текст, схожий на людський, але можуть випадково посилювати упередження, присутні в навчальних даних. Як дослідники прагнуть прозорості та справедливості, нові методи оцінки намагаються захопити обидва аспекти – точність та нюанси. Нарешті, відповідальне розроблення штучного інтелекту залежить не лише від технічного прогресу, а від обдуманого розгляду його соціального впливу.अशा प्रकारे.'Interpreted Ukrainian:\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "t1=t3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t2 = \" In recent years, artificial intelligence has rapidly evolved, transforming industries and daily life. From self-driving cars to medical diagnostics, AI systems demonstrate impressive capabilities—but they also raise ethical concerns. Language models, in particular, generate human-like text but may inadvertently reinforce biases present in training data. As researchers strive for transparency and fairness, new evaluation methods aim to capture both accuracy and nuance. Ultimately, responsible AI development depends not only on technical progress, but on thoughtful consideration of its societal impact.\"\n",
+    "t1 = \"У нещодавно минулому штучний інтелект швидко розвивався, перетворюючи галузі та повсякденне життя. Автономні автомобілі, діагностика в медицині, системи штучного інтелекту демонструють вражаючі можливості, але також викликають етичні занепокоєння. Моделі мовлення генерують текст, схожий на людський, але можуть випадково посилювати упередження, які присутні в навчальних даних. Щоб досягти прозорості та справедливості, розробляються нові методи оцінювання, які збирають обидві точність і нюанси. Нарешті, відповідальне розроблення штучного інтелекту залежить не лише від технічного прогресу, але й від обдуманого розгляду його соціального впливу.roneellowஆசை. been\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def get_non_letters_no_spaces(text):\n",
+    "#     preserved = set(\"0123456789()[]{}.:;!?-+=*/%<>$€₴£¥\") # removed ,\n",
+    "#     return [char for char in text if char in preserved]\n",
+    "\n",
+    "# def count_non_letters_no_spaces(text):\n",
+    "#     # count = 0\n",
+    "#     # for char in text:\n",
+    "#     #     if not unicodedata.category(char).startswith('L') and not char.isspace():\n",
+    "#     #         count += 1\n",
+    "#     # return count\n",
+    "\n",
+    "#     return len(get_non_letters_no_spaces(text))\n",
+    "\n",
+    "# def reward_count_non_letters_no_spaces(completions, sources, references = None, **kwargs):\n",
+    "#     rewards = []\n",
+    "#     for src, comp in zip(sources, completions):\n",
+    "#         src_count = count_non_letters_no_spaces(src)\n",
+    "#         comp_count = count_non_letters_no_spaces(comp)\n",
+    "\n",
+    "#         rewards.append(relative_difference(src_count, comp_count))\n",
+    "\n",
+    "#     return rewards\n",
+    "\n",
+    "# #reward_count_non_letters_no_spaces([t1], [t2])\n",
+    "\n",
+    "reward_lexical([t1], [t2]), reward_count_uppercase_letters([t1], [t2]), reward_count_non_letters_no_spaces([t1], [t2]), reward_count_words([t1], [t2]), reward_count_unique_words([t1], [t2]), reward_count_unpaired_items([t1], [t2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(tokenizer.encode(t1)), len(tokenizer.encode(t2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_non_letters_no_spaces(t1), get_non_letters_no_spaces(t2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -941,8 +1115,6 @@
     "    gradient_accumulation_steps=32, # 16\n",
     "    #per_device_eval_batch_size=4*2,\n",
     "    max_grad_norm=0.4, # 0.5\n",
-    "\n",
-    "    #temperature=0.6,\n",
     "    \n",
     "    # Parameters that control de data preprocessing\n",
     "    max_completion_length=256,\n",
